--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -13,6 +14,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
   <link href="https://fonts.googleapis.com/css?family=Montserrat|Nunito|Open+Sans|Source+Sans+Pro&display=swap"
     rel="stylesheet">
+  <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   <title>React App</title>
 </head>
 
