--- a/client/public/index.html
+++ b/client/public/index.html
@@ -15,7 +15,7 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat|Nunito|Open+Sans|Source+Sans+Pro&display=swap"
     rel="stylesheet">
   <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
-  <title>React App</title>
+  <title>Just Tanned - Buy Exclusive Leather Products </title>
 </head>
 
 <body>
